src/parser/y.output
   0  $accept : programa $end

   1  programa : IDENTIFICADOR BEGIN cuerpo END
   2           | IDENTIFICADOR BEGIN END
   3           | IDENTIFICADOR BEGIN cuerpo
   4           | IDENTIFICADOR error cuerpo END
   5           | BEGIN cuerpo END
   6           | IDENTIFICADOR error cuerpo error

   7  cuerpo : cuerpo sentencia
   8         | sentencia

   9  sentencia : sentenciaDeclarativa
  10            | sentenciaEjecutable ';'
  11            | etiqueta
  12            | sentenciaEjecutable error
  13            | error ';'
  14            | sentenciaRet ';'

  15  sentenciaDeclarativa : tipoDato IDENTIFICADOR ';'
  16                       | tipoDato IDENTIFICADOR ',' listaVariable ';'
  17                       | tipoDato IDENTIFICADOR ',' error ';'
  18                       | tipoDato IDENTIFICADOR ',' listaVariable error ';'
  19                       | tipoDato IDENTIFICADOR error ';'
  20                       | typedefDeclaracion ';'
  21                       | typedefDeclaracion error
  22                       | tipoDato funDeclaracion ';'
  23                       | funDeclaracion ';'

  24  typedefDeclaracion : TYPEDEF declaracionSubtipo
  25                     | TYPEDEF declaracionTriple
  26                     | declaracionSubtipo
  27                     | error declaracionTriple
  28                     | TYPEDEF error

  29  declaracionSubtipo : IDENTIFICADOR SIMASIGNACION tipoDato '{' listaConstante '}'
  30                     | SIMASIGNACION tipoDato '{' listaConstante '}'
  31                     | IDENTIFICADOR SIMASIGNACION tipoDato '{' '}'

  32  declaracionTriple : TRIPLE '<' tipoDato '>' IDENTIFICADOR
  33                    | TRIPLE '<' IDENTIFICADOR '>' IDENTIFICADOR
  34                    | TRIPLE '<' error '>' IDENTIFICADOR
  35                    | TRIPLE '<' tipoDato '>' error
  36                    | TRIPLE '<' IDENTIFICADOR '>' error
  37                    | TRIPLE '<' error '>' error
  38                    | TRIPLE IDENTIFICADOR '>' IDENTIFICADOR
  39                    | TRIPLE '<' IDENTIFICADOR IDENTIFICADOR
  40                    | TRIPLE IDENTIFICADOR IDENTIFICADOR
  41                    | TRIPLE tipoDato IDENTIFICADOR

  42  funDeclaracion : funComienzo '(' parametro ')' BEGIN cuerpoFuncion END
  43                 | FUN error '(' parametro ')' BEGIN cuerpoFuncion END
  44                 | funComienzo '(' parametro ',' error ')' BEGIN cuerpoFuncion END
  45                 | funComienzo '(' parametro ')' BEGIN error END

  46  funComienzo : FUN IDENTIFICADOR

  47  tipoDato : SINGLE
  48           | LONGINT
  49           | HEXADECIMAL

  50  listaVariable : listaVariable ',' IDENTIFICADOR
  51                | listaVariable ',' error
  52                | IDENTIFICADOR

  53  listaConstante : listaConstante ',' constante
  54                 | constante

  55  constante : CONSTANTE
  56            | '-' CONSTANTE

  57  parametro : tipoDato IDENTIFICADOR
  58            | error IDENTIFICADOR
  59            | tipoDato error

  60  cuerpoFuncion : cuerpoFuncion sentenciaConRet
  61                | sentenciaConRet

  62  sentenciaConRet : sentenciaDeclarativa
  63                  | sentenciaEjecutableConRet ';'
  64                  | etiqueta
  65                  | sentenciaEjecutableConRet

  66  sentenciaRet : RET '(' expresion ')'

  67  sentenciaEjecutable : asignacion
  68                      | clausulaSeleccion
  69                      | clausulaBucle
  70                      | goto
  71                      | mensajeSalida

  72  sentenciaEjecutableConRet : asignacion
  73                            | clausulaBucle
  74                            | goto
  75                            | mensajeSalida
  76                            | sentenciaRet
  77                            | clausulaSeleccionConRet

  78  asignacion : IDENTIFICADOR SIMASIGNACION expresion
  79             | IDENTIFICADOR CADENA_MULTI SIMASIGNACION expresion
  80             | IDENTIFICADOR CONSTANTE SIMASIGNACION expresion

  81  expresion : expresion '+' termino
  82            | expresion '+' error
  83            | error '+' termino
  84            | expresion '-' termino
  85            | expresion '-' error
  86            | error '-' termino
  87            | termino

  88  termino : termino '*' operando
  89          | termino '*' error
  90          | error '*' operando
  91          | termino '/' operando
  92          | termino '/' error
  93          | error '/' operando
  94          | operando

  95  operando : IDENTIFICADOR
  96           | constante
  97           | invocacionFuncion
  98           | IDENTIFICADOR CADENA_MULTI
  99           | IDENTIFICADOR '1'
 100           | IDENTIFICADOR '2'
 101           | IDENTIFICADOR '3'

 102  invocacionFuncion : IDENTIFICADOR '(' expresion ')'
 103                    | IDENTIFICADOR '(' tipoDato expresion ')'
 104                    | IDENTIFICADOR '(' tipoDato '(' expresion ')' ')'
 105                    | IDENTIFICADOR '(' expresion ',' error ')'
 106                    | IDENTIFICADOR '(' error ')'
 107                    | IDENTIFICADOR '(' tipoDato expresion ',' error ')'
 108                    | IDENTIFICADOR '(' tipoDato '(' expresion ')' ',' error ')'

 109  clausulaSeleccion : inicioClausulaSeleccion cuerpoThen END_IF
 110                    | IF '(' expresion ')' cuerpoThen END_IF
 111                    | IF '(' expresion ')' cuerpoThen ELSE bloqueSentenciaEjecutable END_IF
 112                    | inicioClausulaSeleccion cuerpoThen ELSE bloqueSentenciaEjecutable END_IF
 113                    | inicioClausulaSeleccion cuerpoThen error
 114                    | inicioClausulaSeleccion cuerpoThen ELSE bloqueSentenciaEjecutable error
 115                    | IF '(' condicion cuerpoThen ELSE bloqueSentenciaEjecutable END_IF
 116                    | IF '(' condicion cuerpoThen END_IF
 117                    | IF condicion ')' cuerpoThen ELSE bloqueSentenciaEjecutable END_IF
 118                    | IF condicion ')' cuerpoThen END_IF
 119                    | IF condicion cuerpoThen ELSE bloqueSentenciaEjecutable END_IF
 120                    | IF condicion cuerpoThen END_IF
 121                    | inicioClausulaSeleccion THEN error END_IF
 122                    | inicioClausulaSeleccion cuerpoThen ELSE error END_IF
 123                    | inicioClausulaSeleccion THEN error ELSE bloqueSentenciaEjecutable END_IF
 124                    | inicioClausulaSeleccion THEN error ELSE error END_IF

 125  inicioClausulaSeleccion : IF '(' condicion ')'

 126  cuerpoThen : THEN bloqueSentenciaEjecutable

 127  clausulaSeleccionConRet : inicioClausulaSeleccion cuerpoThenConRet END_IF
 128                          | IF '(' expresion ')' cuerpoThenConRet END_IF
 129                          | IF '(' expresion ')' cuerpoThenConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 130                          | inicioClausulaSeleccion cuerpoThenConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 131                          | inicioClausulaSeleccion cuerpoThenConRet error
 132                          | inicioClausulaSeleccion cuerpoThenConRet ELSE bloqueSentenciaEjecutableConRet error
 133                          | IF '(' condicion cuerpoThenConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 134                          | IF '(' condicion cuerpoThenConRet END_IF
 135                          | IF condicion ')' cuerpoThenConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 136                          | IF condicion ')' cuerpoThenConRet END_IF
 137                          | IF condicion cuerpoThenConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 138                          | IF condicion cuerpoThenConRet END_IF
 139                          | inicioClausulaSeleccion THEN error END_IF
 140                          | inicioClausulaSeleccion cuerpoThenConRet ELSE error END_IF
 141                          | inicioClausulaSeleccion THEN error ELSE bloqueSentenciaEjecutableConRet END_IF
 142                          | inicioClausulaSeleccion THEN error ELSE error END_IF

 143  cuerpoThenConRet : THEN bloqueSentenciaEjecutableConRet

 144  condicion : '(' expresion ',' listaExpresiones ')' comparador '(' expresion ',' listaExpresiones ')'
 145            | expresion ',' listaExpresiones comparador expresion ',' listaExpresiones
 146            | expresion ',' listaExpresiones comparador '(' expresion ',' listaExpresiones ')'
 147            | '(' expresion ',' listaExpresiones error comparador error expresion ',' listaExpresiones ')'
 148            | '(' expresion ',' listaExpresiones ')' comparador error expresion ',' listaExpresiones error
 149            | '(' expresion ',' listaExpresiones error comparador '(' expresion ',' listaExpresiones ')'
 150            | '(' expresion ',' listaExpresiones ')' comparador error expresion ',' listaExpresiones ')'
 151            | '(' expresion ',' listaExpresiones ')' error '(' expresion ',' listaExpresiones ')'
 152            | '(' expresion ',' listaExpresiones ')' comparador '(' expresion ',' listaExpresiones error
 153            | expresion comparador expresion
 154            | error comparador expresion
 155            | expresion comparador error
 156            | expresion error expresion

 157  listaExpresiones : listaExpresiones ',' expresion
 158                   | expresion
 159                   | listaExpresiones ',' error

 160  comparador : '<'
 161             | '>'
 162             | '='
 163             | DISTINTO
 164             | MENOR_IGUAL
 165             | MAYOR_IGUAL

 166  cuerpoEjecutable : cuerpoEjecutable sentenciaEjecutable ';'
 167                   | sentenciaEjecutable ';'
 168                   | sentenciaEjecutable error

 169  bloqueSentenciaEjecutable : sentenciaEjecutable ';'
 170                            | sentenciaEjecutable error
 171                            | BEGIN cuerpoEjecutable END

 172  cuerpoEjecutableConRet : cuerpoEjecutableConRet sentenciaEjecutableConRet ';'
 173                         | sentenciaEjecutableConRet ';'

 174  bloqueSentenciaEjecutableConRet : sentenciaEjecutableConRet ';'
 175                                  | sentenciaEjecutableConRet error
 176                                  | BEGIN cuerpoEjecutableConRet END

 177  clausulaBucle : repeat bloqueSentenciaEjecutable WHILE '(' condicion ')'
 178                | repeat error WHILE '(' condicion ')'
 179                | repeat bloqueSentenciaEjecutable WHILE error condicion ')'
 180                | repeat bloqueSentenciaEjecutable WHILE '(' error ')'
 181                | repeat bloqueSentenciaEjecutable WHILE '(' condicion
 182                | repeat bloqueSentenciaEjecutable WHILE error condicion error
 183                | repeat error WHILE '(' error ')'
 184                | repeat error WHILE error condicion error
 185                | repeat bloqueSentenciaEjecutable error

 186  repeat : REPEAT

 187  goto : GOTO IDENTIFICADOR '@'
 188       | GOTO IDENTIFICADOR error
 189       | GOTO error '@'
 190       | IDENTIFICADOR '@'

 191  etiqueta : IDENTIFICADOR ':'
 192           | ':'

 193  mensajeSalida : OUTF '(' expresion ')'
 194                | OUTF '(' CADENA_MULTI ')'
 195                | OUTF '(' error ')'

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR  shift 1
	BEGIN  shift 2
	.  error

	programa  goto 3


state 1
	programa : IDENTIFICADOR . BEGIN cuerpo END  (1)
	programa : IDENTIFICADOR . BEGIN END  (2)
	programa : IDENTIFICADOR . BEGIN cuerpo  (3)
	programa : IDENTIFICADOR . error cuerpo END  (4)
	programa : IDENTIFICADOR . error cuerpo error  (6)

	error  shift 4
	BEGIN  shift 5
	.  error


state 2
	programa : BEGIN . cuerpo END  (5)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	OUTF  shift 11
	TYPEDEF  shift 12
	FUN  shift 13
	RET  shift 14
	SINGLE  shift 15
	REPEAT  shift 16
	GOTO  shift 17
	LONGINT  shift 18
	':'  shift 19
	.  error

	cuerpo  goto 20
	sentencia  goto 21
	sentenciaDeclarativa  goto 22
	sentenciaEjecutable  goto 23
	etiqueta  goto 24
	sentenciaRet  goto 25
	tipoDato  goto 26
	typedefDeclaracion  goto 27
	funDeclaracion  goto 28
	declaracionSubtipo  goto 29
	funComienzo  goto 30
	asignacion  goto 31
	clausulaSeleccion  goto 32
	clausulaBucle  goto 33
	goto  goto 34
	mensajeSalida  goto 35
	inicioClausulaSeleccion  goto 36
	repeat  goto 37


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : IDENTIFICADOR error . cuerpo END  (4)
	programa : IDENTIFICADOR error . cuerpo error  (6)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	OUTF  shift 11
	TYPEDEF  shift 12
	FUN  shift 13
	RET  shift 14
	SINGLE  shift 15
	REPEAT  shift 16
	GOTO  shift 17
	LONGINT  shift 18
	':'  shift 19
	.  error

	cuerpo  goto 38
	sentencia  goto 21
	sentenciaDeclarativa  goto 22
	sentenciaEjecutable  goto 23
	etiqueta  goto 24
	sentenciaRet  goto 25
	tipoDato  goto 26
	typedefDeclaracion  goto 27
	funDeclaracion  goto 28
	declaracionSubtipo  goto 29
	funComienzo  goto 30
	asignacion  goto 31
	clausulaSeleccion  goto 32
	clausulaBucle  goto 33
	goto  goto 34
	mensajeSalida  goto 35
	inicioClausulaSeleccion  goto 36
	repeat  goto 37


state 5
	programa : IDENTIFICADOR BEGIN . cuerpo END  (1)
	programa : IDENTIFICADOR BEGIN . END  (2)
	programa : IDENTIFICADOR BEGIN . cuerpo  (3)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 39
	OUTF  shift 11
	TYPEDEF  shift 12
	FUN  shift 13
	RET  shift 14
	SINGLE  shift 15
	REPEAT  shift 16
	GOTO  shift 17
	LONGINT  shift 18
	':'  shift 19
	.  error

	cuerpo  goto 40
	sentencia  goto 21
	sentenciaDeclarativa  goto 22
	sentenciaEjecutable  goto 23
	etiqueta  goto 24
	sentenciaRet  goto 25
	tipoDato  goto 26
	typedefDeclaracion  goto 27
	funDeclaracion  goto 28
	declaracionSubtipo  goto 29
	funComienzo  goto 30
	asignacion  goto 31
	clausulaSeleccion  goto 32
	clausulaBucle  goto 33
	goto  goto 34
	mensajeSalida  goto 35
	inicioClausulaSeleccion  goto 36
	repeat  goto 37


state 6
	sentencia : error . ';'  (13)
	typedefDeclaracion : error . declaracionTriple  (27)

	TRIPLE  shift 41
	';'  shift 42
	.  error

	declaracionTriple  goto 43


state 7
	declaracionSubtipo : IDENTIFICADOR . SIMASIGNACION tipoDato '{' listaConstante '}'  (29)
	declaracionSubtipo : IDENTIFICADOR . SIMASIGNACION tipoDato '{' '}'  (31)
	asignacion : IDENTIFICADOR . SIMASIGNACION expresion  (78)
	asignacion : IDENTIFICADOR . CADENA_MULTI SIMASIGNACION expresion  (79)
	asignacion : IDENTIFICADOR . CONSTANTE SIMASIGNACION expresion  (80)
	goto : IDENTIFICADOR . '@'  (190)
	etiqueta : IDENTIFICADOR . ':'  (191)

	CADENA_MULTI  shift 44
	SIMASIGNACION  shift 45
	CONSTANTE  shift 46
	'@'  shift 47
	':'  shift 48
	.  error


state 8
	tipoDato : HEXADECIMAL .  (49)

	.  reduce 49


state 9
	declaracionSubtipo : SIMASIGNACION . tipoDato '{' listaConstante '}'  (30)

	HEXADECIMAL  shift 8
	SINGLE  shift 15
	LONGINT  shift 18
	.  error

	tipoDato  goto 49


state 10
	clausulaSeleccion : IF . '(' expresion ')' cuerpoThen END_IF  (110)
	clausulaSeleccion : IF . '(' expresion ')' cuerpoThen ELSE bloqueSentenciaEjecutable END_IF  (111)
	clausulaSeleccion : IF . '(' condicion cuerpoThen ELSE bloqueSentenciaEjecutable END_IF  (115)
	clausulaSeleccion : IF . '(' condicion cuerpoThen END_IF  (116)
	clausulaSeleccion : IF . condicion ')' cuerpoThen ELSE bloqueSentenciaEjecutable END_IF  (117)
	clausulaSeleccion : IF . condicion ')' cuerpoThen END_IF  (118)
	clausulaSeleccion : IF . condicion cuerpoThen ELSE bloqueSentenciaEjecutable END_IF  (119)
	clausulaSeleccion : IF . condicion cuerpoThen END_IF  (120)
	inicioClausulaSeleccion : IF . '(' condicion ')'  (125)

	error  shift 50
	IDENTIFICADOR  shift 51
	CONSTANTE  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	constante  goto 55
	expresion  goto 56
	termino  goto 57
	operando  goto 58
	invocacionFuncion  goto 59
	condicion  goto 60


state 11
	mensajeSalida : OUTF . '(' expresion ')'  (193)
	mensajeSalida : OUTF . '(' CADENA_MULTI ')'  (194)
	mensajeSalida : OUTF . '(' error ')'  (195)

	'('  shift 61
	.  error


state 12
	typedefDeclaracion : TYPEDEF . declaracionSubtipo  (24)
	typedefDeclaracion : TYPEDEF . declaracionTriple  (25)
	typedefDeclaracion : TYPEDEF . error  (28)

	error  shift 62
	IDENTIFICADOR  shift 63
	SIMASIGNACION  shift 9
	TRIPLE  shift 41
	.  error

	declaracionSubtipo  goto 64
	declaracionTriple  goto 65


state 13
	funDeclaracion : FUN . error '(' parametro ')' BEGIN cuerpoFuncion END  (43)
	funComienzo : FUN . IDENTIFICADOR  (46)

	error  shift 66
	IDENTIFICADOR  shift 67
	.  error


state 14
	sentenciaRet : RET . '(' expresion ')'  (66)

	'('  shift 68
	.  error


state 15
	tipoDato : SINGLE .  (47)

	.  reduce 47


state 16
	repeat : REPEAT .  (186)

	.  reduce 186


state 17
	goto : GOTO . IDENTIFICADOR '@'  (187)
	goto : GOTO . IDENTIFICADOR error  (188)
	goto : GOTO . error '@'  (189)

	error  shift 69
	IDENTIFICADOR  shift 70
	.  error


state 18
	tipoDato : LONGINT .  (48)

	.  reduce 48


state 19
	etiqueta : ':' .  (192)

	.  reduce 192


state 20
	programa : BEGIN cuerpo . END  (5)
	cuerpo : cuerpo . sentencia  (7)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 71
	OUTF  shift 11
	TYPEDEF  shift 12
	FUN  shift 13
	RET  shift 14
	SINGLE  shift 15
	REPEAT  shift 16
	GOTO  shift 17
	LONGINT  shift 18
	':'  shift 19
	.  error

	sentencia  goto 72
	sentenciaDeclarativa  goto 22
	sentenciaEjecutable  goto 23
	etiqueta  goto 24
	sentenciaRet  goto 25
	tipoDato  goto 26
	typedefDeclaracion  goto 27
	funDeclaracion  goto 28
	declaracionSubtipo  goto 29
	funComienzo  goto 30
	asignacion  goto 31
	clausulaSeleccion  goto 32
	clausulaBucle  goto 33
	goto  goto 34
	mensajeSalida  goto 35
	inicioClausulaSeleccion  goto 36
	repeat  goto 37


state 21
	cuerpo : sentencia .  (8)

	.  reduce 8


state 22
	sentencia : sentenciaDeclarativa .  (9)

	.  reduce 9


state 23
	sentencia : sentenciaEjecutable . ';'  (10)
	sentencia : sentenciaEjecutable . error  (12)

	error  shift 73
	';'  shift 74
	.  error


state 24
	sentencia : etiqueta .  (11)

	.  reduce 11


state 25
	sentencia : sentenciaRet . ';'  (14)

	';'  shift 75
	.  error


state 26
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ';'  (15)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ',' listaVariable ';'  (16)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ',' error ';'  (17)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ',' listaVariable error ';'  (18)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR error ';'  (19)
	sentenciaDeclarativa : tipoDato . funDeclaracion ';'  (22)

	IDENTIFICADOR  shift 76
	FUN  shift 13
	.  error

	funDeclaracion  goto 77
	funComienzo  goto 30


state 27
	sentenciaDeclarativa : typedefDeclaracion . ';'  (20)
	sentenciaDeclarativa : typedefDeclaracion . error  (21)

	error  shift 78
	';'  shift 79
	.  error


state 28
	sentenciaDeclarativa : funDeclaracion . ';'  (23)

	';'  shift 80
	.  error


state 29
	typedefDeclaracion : declaracionSubtipo .  (26)

	.  reduce 26


state 30
	funDeclaracion : funComienzo . '(' parametro ')' BEGIN cuerpoFuncion END  (42)
	funDeclaracion : funComienzo . '(' parametro ',' error ')' BEGIN cuerpoFuncion END  (44)
	funDeclaracion : funComienzo . '(' parametro ')' BEGIN error END  (45)

	'('  shift 81
	.  error


state 31
	sentenciaEjecutable : asignacion .  (67)

	.  reduce 67


state 32
	sentenciaEjecutable : clausulaSeleccion .  (68)

	.  reduce 68


state 33
	sentenciaEjecutable : clausulaBucle .  (69)

	.  reduce 69


state 34
	sentenciaEjecutable : goto .  (70)

	.  reduce 70


state 35
	sentenciaEjecutable : mensajeSalida .  (71)

	.  reduce 71


state 36
	clausulaSeleccion : inicioClausulaSeleccion . cuerpoThen END_IF  (109)
	clausulaSeleccion : inicioClausulaSeleccion . cuerpoThen ELSE bloqueSentenciaEjecutable END_IF  (112)
	clausulaSeleccion : inicioClausulaSeleccion . cuerpoThen error  (113)
	clausulaSeleccion : inicioClausulaSeleccion . cuerpoThen ELSE bloqueSentenciaEjecutable error  (114)
	clausulaSeleccion : inicioClausulaSeleccion . THEN error END_IF  (121)
	clausulaSeleccion : inicioClausulaSeleccion . cuerpoThen ELSE error END_IF  (122)
	clausulaSeleccion : inicioClausulaSeleccion . THEN error ELSE bloqueSentenciaEjecutable END_IF  (123)
	clausulaSeleccion : inicioClausulaSeleccion . THEN error ELSE error END_IF  (124)

	THEN  shift 82
	.  error

	cuerpoThen  goto 83


state 37
	clausulaBucle : repeat . bloqueSentenciaEjecutable WHILE '(' condicion ')'  (177)
	clausulaBucle : repeat . error WHILE '(' condicion ')'  (178)
	clausulaBucle : repeat . bloqueSentenciaEjecutable WHILE error condicion ')'  (179)
	clausulaBucle : repeat . bloqueSentenciaEjecutable WHILE '(' error ')'  (180)
	clausulaBucle : repeat . bloqueSentenciaEjecutable WHILE '(' condicion  (181)
	clausulaBucle : repeat . bloqueSentenciaEjecutable WHILE error condicion error  (182)
	clausulaBucle : repeat . error WHILE '(' error ')'  (183)
	clausulaBucle : repeat . error WHILE error condicion error  (184)
	clausulaBucle : repeat . bloqueSentenciaEjecutable error  (185)

	error  shift 84
	IDENTIFICADOR  shift 85
	IF  shift 10
	BEGIN  shift 86
	OUTF  shift 11
	REPEAT  shift 16
	GOTO  shift 17
	.  error

	sentenciaEjecutable  goto 87
	asignacion  goto 31
	clausulaSeleccion  goto 32
	clausulaBucle  goto 33
	goto  goto 34
	mensajeSalida  goto 35
	inicioClausulaSeleccion  goto 36
	bloqueSentenciaEjecutable  goto 88
	repeat  goto 37


state 38
	programa : IDENTIFICADOR error cuerpo . END  (4)
	programa : IDENTIFICADOR error cuerpo . error  (6)
	cuerpo : cuerpo . sentencia  (7)

	error  shift 89
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 90
	OUTF  shift 11
	TYPEDEF  shift 12
	FUN  shift 13
	RET  shift 14
	SINGLE  shift 15
	REPEAT  shift 16
	GOTO  shift 17
	LONGINT  shift 18
	':'  shift 19
	.  error

	sentencia  goto 72
	sentenciaDeclarativa  goto 22
	sentenciaEjecutable  goto 23
	etiqueta  goto 24
	sentenciaRet  goto 25
	tipoDato  goto 26
	typedefDeclaracion  goto 27
	funDeclaracion  goto 28
	declaracionSubtipo  goto 29
	funComienzo  goto 30
	asignacion  goto 31
	clausulaSeleccion  goto 32
	clausulaBucle  goto 33
	goto  goto 34
	mensajeSalida  goto 35
	inicioClausulaSeleccion  goto 36
	repeat  goto 37


state 39
	programa : IDENTIFICADOR BEGIN END .  (2)

	.  reduce 2


state 40
	programa : IDENTIFICADOR BEGIN cuerpo . END  (1)
	programa : IDENTIFICADOR BEGIN cuerpo .  (3)
	cuerpo : cuerpo . sentencia  (7)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 91
	OUTF  shift 11
	TYPEDEF  shift 12
	FUN  shift 13
	RET  shift 14
	SINGLE  shift 15
	REPEAT  shift 16
	GOTO  shift 17
	LONGINT  shift 18
	':'  shift 19
	$end  reduce 3

	sentencia  goto 72
	sentenciaDeclarativa  goto 22
	sentenciaEjecutable  goto 23
	etiqueta  goto 24
	sentenciaRet  goto 25
	tipoDato  goto 26
	typedefDeclaracion  goto 27
	funDeclaracion  goto 28
	declaracionSubtipo  goto 29
	funComienzo  goto 30
	asignacion  goto 31
	clausulaSeleccion  goto 32
	clausulaBucle  goto 33
	goto  goto 34
	mensajeSalida  goto 35
	inicioClausulaSeleccion  goto 36
	repeat  goto 37


state 41
	declaracionTriple : TRIPLE . '<' tipoDato '>' IDENTIFICADOR  (32)
	declaracionTriple : TRIPLE . '<' IDENTIFICADOR '>' IDENTIFICADOR  (33)
	declaracionTriple : TRIPLE . '<' error '>' IDENTIFICADOR  (34)
	declaracionTriple : TRIPLE . '<' tipoDato '>' error  (35)
	declaracionTriple : TRIPLE . '<' IDENTIFICADOR '>' error  (36)
	declaracionTriple : TRIPLE . '<' error '>' error  (37)
	declaracionTriple : TRIPLE . IDENTIFICADOR '>' IDENTIFICADOR  (38)
	declaracionTriple : TRIPLE . '<' IDENTIFICADOR IDENTIFICADOR  (39)
	declaracionTriple : TRIPLE . IDENTIFICADOR IDENTIFICADOR  (40)
	declaracionTriple : TRIPLE . tipoDato IDENTIFICADOR  (41)

	IDENTIFICADOR  shift 92
	HEXADECIMAL  shift 8
	SINGLE  shift 15
	LONGINT  shift 18
	'<'  shift 93
	.  error

	tipoDato  goto 94


state 42
	sentencia : error ';' .  (13)

	.  reduce 13


state 43
	typedefDeclaracion : error declaracionTriple .  (27)

	.  reduce 27


state 44
	asignacion : IDENTIFICADOR CADENA_MULTI . SIMASIGNACION expresion  (79)

	SIMASIGNACION  shift 95
	.  error


state 45
	declaracionSubtipo : IDENTIFICADOR SIMASIGNACION . tipoDato '{' listaConstante '}'  (29)
	declaracionSubtipo : IDENTIFICADOR SIMASIGNACION . tipoDato '{' '}'  (31)
	asignacion : IDENTIFICADOR SIMASIGNACION . expresion  (78)

	error  shift 96
	IDENTIFICADOR  shift 51
	HEXADECIMAL  shift 8
	SINGLE  shift 15
	LONGINT  shift 18
	CONSTANTE  shift 52
	'-'  shift 53
	.  error

	tipoDato  goto 97
	constante  goto 55
	expresion  goto 98
	termino  goto 57
	operando  goto 58
	invocacionFuncion  goto 59


state 46
	asignacion : IDENTIFICADOR CONSTANTE . SIMASIGNACION expresion  (80)

	SIMASIGNACION  shift 99
	.  error


state 47
	goto : IDENTIFICADOR '@' .  (190)

	.  reduce 190


state 48
	etiqueta : IDENTIFICADOR ':' .  (191)

	.  reduce 191


state 49
	declaracionSubtipo : SIMASIGNACION tipoDato . '{' listaConstante '}'  (30)

	'{'  shift 100
	.  error


state 50
	expresion : error . '+' termino  (83)
	expresion : error . '-' termino  (86)
	termino : error . '*' operando  (90)
	termino : error . '/' operando  (93)
	condicion : error . comparador expresion  (154)

	DISTINTO  shift 101
	MENOR_IGUAL  shift 102
	MAYOR_IGUAL  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'<'  shift 108
	'>'  shift 109
	'='  shift 110
	.  error

	comparador  goto 111


state 51
	operando : IDENTIFICADOR .  (95)
	operando : IDENTIFICADOR . CADENA_MULTI  (98)
	operando : IDENTIFICADOR . '1'  (99)
	operando : IDENTIFICADOR . '2'  (100)
	operando : IDENTIFICADOR . '3'  (101)
	invocacionFuncion : IDENTIFICADOR . '(' expresion ')'  (102)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato expresion ')'  (103)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato '(' expresion ')' ')'  (104)
	invocacionFuncion : IDENTIFICADOR . '(' expresion ',' error ')'  (105)
	invocacionFuncion : IDENTIFICADOR . '(' error ')'  (106)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato expresion ',' error ')'  (107)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato '(' expresion ')' ',' error ')'  (108)

	CADENA_MULTI  shift 112
	'('  shift 113
	'1'  shift 114
	'2'  shift 115
	'3'  shift 116
	error  reduce 95
	IDENTIFICADOR  reduce 95
	HEXADECIMAL  reduce 95
	SIMASIGNACION  reduce 95
	DISTINTO  reduce 95
	IF  reduce 95
	THEN  reduce 95
	END  reduce 95
	OUTF  reduce 95
	TYPEDEF  reduce 95
	FUN  reduce 95
	RET  reduce 95
	SINGLE  reduce 95
	MENOR_IGUAL  reduce 95
	MAYOR_IGUAL  reduce 95
	REPEAT  reduce 95
	GOTO  reduce 95
	LONGINT  reduce 95
	'+'  reduce 95
	'-'  reduce 95
	'*'  reduce 95
	'/'  reduce 95
	';'  reduce 95
	','  reduce 95
	'<'  reduce 95
	'>'  reduce 95
	')'  reduce 95
	'='  reduce 95
	':'  reduce 95


state 52
	constante : CONSTANTE .  (55)

	.  reduce 55


state 53
	constante : '-' . CONSTANTE  (56)

	CONSTANTE  shift 117
	.  error

